<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/button_one"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_two"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_three"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_two" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_four"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_three" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_five"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_six"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_seven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_five" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_seven"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_six" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_eight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_nine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/button_ten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_ten"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:text="@string/button_ten"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="returnItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_nine" />
</androidx.constraintlayout.widget.ConstraintLayout>